Initial commit - pushing code to Fuse-Privacy-Disclosure repo

--- a/index.html
+++ b/index.html
@@ -212,6 +212,8 @@
         "./slide7.html",
         "./slide8.html",
         "./slide9.html",
+        "./slide10.html",
+        "./slide11.html",
       ];
 
       async function loadSlides() {
