--- a/slide1.html
+++ b/slide1.html
@@ -170,7 +170,8 @@
     <p class="main-heading fragment" data-fragment-index="1">
       AI Adoption As A Service
     </p>
-    <p data-fragment-index="2"  class="main-heading fragment" style="font-weight: 900; color: #002060; line-height: 0.3 !important;">Empowering Intelligent Automation at Scale</p>
+    <p data-fragment-index="2"  class="main-heading fragment" style="font-weight: 900; color: #002060; line-height: 0.3 !important;">
+      Agentic AI: Turning Intelligence into Action</p>
   </div>
 
   <!-- No inline script needed - handled by global slides-interactive.js -->
