Resolved merge conflict in README.md

--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
         "./slide9.html",
         "./slide10.html",
         "./slide11.html",
+        "./slide12.html",
       ];
 
       async function loadSlides() {
