--- a/slide2.html
+++ b/slide2.html
@@ -268,9 +268,9 @@
 
   <!-- Step buttons -->
   <div class="steps-fusefy">
-    <div class="step-fusefy orange">Ideation in 2 Days</div>
-    <div class="step-fusefy white">Pilot in 1-2 Weeks</div>
-    <div class="step-fusefy blue">Production in 1 Month</div>
+    <div class="step-fusefy orange">Ideation - Under 16 Hours </div>
+    <div class="step-fusefy white">Less Than 2 Days</div>
+    <div class="step-fusefy blue">Instant Results</div>
   </div>
 
   <!-- Feature cards -->
