--- a/slide5.html
+++ b/slide5.html
@@ -293,7 +293,7 @@
         <img src="images/Python.png" alt="Python" style="width: 42px; height: 42px; margin:0;">
         <img src="images/Java.png" alt="Java" style="width: 42px; height: 42px; margin:0;">
         <img src="images/Node.png" alt="Node.js" style="width: 42px; height: 42px; margin:0;">
-        <img src="images/TypeScript.png" alt="TypeScript" style="width: 42px; height: 42px; margin:0;">
+        <img src="images/Typescript.png" alt="TypeScript" style="width: 42px; height: 42px; margin:0;">
         <img src="images/JS.png" alt="JavaScript" style="width: 42px; height: 42px; margin:0;">
     </div>
   </div>
