--- a/index.html
+++ b/index.html
@@ -215,6 +215,8 @@
         "./slide10.html",
         "./slide11.html",
         "./slide12.html",
+        "./slide13.html",
+        "./slide14.html",
       ];
 
       async function loadSlides() {
