--- a/slide3.html
+++ b/slide3.html
@@ -203,7 +203,7 @@
       <!-- Intro -->
       <div class="intro-text">
         <div class="blue-line"></div>
-        <h2>3 Steps for Rapid<br>Enterprise AI Adoption<br>with ROI</h2>
+        <h2>3 Pragmatic , no-hype<br>approch for rapid<br>Enterprise AI Adoption with ROI</h2>
         <p>A pragmatic, <span class="no-hype">no-hype</span> approach to help enterprises adopt AI efficiently and at scale.</p>
       </div>
 
@@ -250,8 +250,8 @@
             </svg>
           </div>
           <div class="step-content">
-            <h3 class="title-ideation">Fusefy AI Ideation Studio</h3>
-            <p>Seamlessly engage with business and identify high ROI use cases and build roadmap.</p>
+            <h3 class="title-ideation">Ideate from Anywhere</h3>
+            <p>Upload any idea—screenshot, note, or memo. Fusefy’s AI turns it into user stories, plans, and docs.</p>
           </div>
         </div>
 
@@ -275,8 +275,8 @@
             </svg>
           </div>
           <div class="step-content">
-            <h3 class="title-foundry">Fusefy AI Foundry</h3>
-            <p>Build your ideas in any AI platform of your choice rapidly with state of art low-code models.</p>
+            <h3 class="title-foundry">Build & Test</h3>
+            <p>Fusefy’s AI foundry writes code and runs unit tests—ready for production out of the box.</p>
           </div>
         </div>
 
@@ -296,8 +296,8 @@
             </svg>
           </div>
           <div class="step-content">
-            <h3 class="title-audit">Fusefy AI Audit Suite</h3>
-            <p>Continuously measure model performance, security and safety features to comply with regulatory and security standards.</p>
+            <h3 class="title-audit">Deploy & Monitor</h3>
+            <p>Fusefy’s Audit Suite makes AI integration seamless, transparent, and fully monitored.</p>
           </div>
         </div>
       </div>
