Revert "new changes"
This reverts commit cc45731652da2d019feca2d69522b3679ff12a37.

--- a/slide5.html
+++ b/slide5.html
@@ -230,7 +230,7 @@
 
   <header class="slide-header" data-id="header">
     <h1 class="zoom-in" data-auto-animate data-auto-animate-duration="1.5">
-      AI Support Across Infrastructure
+      Powering Our Platform
     </h1>
     <img
       src="images/Logo.png"
@@ -243,10 +243,10 @@
 
   <!-- Heading on left, hyphen, content on right -->
   <div class="platform-hero">
-    <!-- <h2 style="margin-top: 0% !important;" class="platform-heading">
+    <h2 style="margin-top: 0% !important;" class="platform-heading">
       AI Tools & Frameworks
-    </h2> -->
-    <span style="margin-top: -2% !important;" class="platform-hyphen"></span>
+    </h2>
+    <span style="margin-top: -2% !important;" class="platform-hyphen">-</span>
     <p class="platform-subtext">
   Our solution is <span style="font-weight: 700;">platform and language agnostic</span>, 
   supporting a vast ecosystem of AI tools and services. Plus, you <br> can 
@@ -304,20 +304,20 @@
   <h2 class="ai-platform-heading">Bring Your own Frameworks & Tools</h2>
   <div class="platform-cards">
     <div class="platform-card">
-      <img src="images/mcp.png" alt="MCP" />
-      <h3>MCP</h3>
+      <img src="images/Agentforce.png" alt="Agentforce" />
+      <h3>Agentforce</h3>
     </div>
     <div class="platform-card">
-      <img src="images/anthropic.png" alt="Anthropic SDK" />
-      <h3>Anthropic SDK</h3>
+      <img src="images/b1.png" alt="Power BI" />
+      <h3>Power BI</h3>
     </div>
     <div class="platform-card">
-      <img src="images/langgraph.png" alt="LangGraph" />
-      <h3>LangGraph</h3>
+      <img src="images/tableau.png" alt="Tableau" />
+      <h3>Tableau</h3>
     </div>
     <div class="platform-card">
-      <img src="images/bedrock.png" alt="AWS Bedrock SDK" />
-      <h3>AWS Bedrock <br> SDK</h3>
+      <img src="images/crewai.png" alt="CrewAI" />
+      <h3>CrewAI</h3>
     </div>
     <div class="platform-card">
       <img src="images/n8n.png" alt="N8N" />
