--- a/slide1.html
+++ b/slide1.html
@@ -192,7 +192,7 @@
 
     <!-- Paragraph below with fragment index 1 -->
     <p class="main-heading fragment" data-fragment-index="1">
-      AI Adoption As A Service
+      Agentic AI as A Service
     </p>
 
     <!-- NEW: Container for the icon and text. The fragment attributes are moved here so they appear together. -->
