--- a/slide4.html
+++ b/slide4.html
@@ -417,6 +417,10 @@
                         <h3>ERP Agents</h3>
                         <p>Integrating and managing core business operations.</p>
                     </div>
+                    <div class="card">
+                        <h3>LLM FINE-TUNING</h3>
+                        <p>Replacing vendor tools and SaaS subscriptions for RPA, OCR, and automation with custom Agentic AI workflows.</p>
+                    </div>
                 </div>
             </div>
         </div>
