--- a/slide6.html
+++ b/slide6.html
@@ -187,7 +187,7 @@
   <!-- Compare Section -->
   <div class="compare-section">
     <p>
-      Compare <span class="highlight-fusefy">Fusefy</span> with legacy AI tools:
+      Compare <span class="highlight-fusefy">Fusefy</span> with AI tools:
     </p>
     <hr />
   </div>
