--- a/slide5.html
+++ b/slide5.html
@@ -230,7 +230,7 @@
 
   <header class="slide-header" data-id="header">
     <h1 class="zoom-in" data-auto-animate data-auto-animate-duration="1.5">
-      Powering Our Platform
+      Seamless AI Integration
     </h1>
     <img
       src="images/Logo.png"
@@ -243,10 +243,10 @@
 
   <!-- Heading on left, hyphen, content on right -->
   <div class="platform-hero">
-    <h2 style="margin-top: 0% !important;" class="platform-heading">
+    <!-- <h2 style="margin-top: 0% !important;" class="platform-heading">
       AI Tools & Frameworks
-    </h2>
-    <span style="margin-top: -2% !important;" class="platform-hyphen">-</span>
+    </h2> -->
+    <span style="margin-top: -2% !important;" class="platform-hyphen"></span>
     <p class="platform-subtext">
   Our solution is <span style="font-weight: 700;">platform and language agnostic</span>, 
   supporting a vast ecosystem of AI tools and services. Plus, you <br> can 
@@ -308,16 +308,16 @@
       <h3>Agentforce</h3>
     </div>
     <div class="platform-card">
-      <img src="images/b1.png" alt="Power BI" />
-      <h3>Power BI</h3>
+      <img src="images/mcp (1).png" alt="MCP" />
+      <h3>MCP</h3>
     </div>
     <div class="platform-card">
-      <img src="images/tableau.png" alt="Tableau" />
-      <h3>Tableau</h3>
+      <img src="images/adk-1.png" alt="ADK" />
+      <h3>ADK</h3>
     </div>
     <div class="platform-card">
-      <img src="images/crewai.png" alt="CrewAI" />
-      <h3>CrewAI</h3>
+      <img src="images/langchain-1.png" alt="Langchain" />
+      <h3>Langchain</h3>
     </div>
     <div class="platform-card">
       <img src="images/n8n.png" alt="N8N" />
