--- a/slide1.html
+++ b/slide1.html
@@ -192,15 +192,14 @@
 
     <!-- Paragraph below with fragment index 1 -->
     <p class="main-heading fragment" data-fragment-index="1">
-      Agentic AI as A Service
+      Agentic AI as A Service - Turning intelligence <br> to actions
     </p>
 
     <!-- NEW: Container for the icon and text. The fragment attributes are moved here so they appear together. -->
     <div class="agentic-container fragment" data-fragment-index="2">
-      <img src="images/Slide1.png" alt="Agentic AI Icon" class="agentic-icon" />
-      <p class="main-heading" style="font-weight: 700; color: #002060; line-height: 1.6 !important;">
+      <!-- <p class="main-heading" style="font-weight: 700; color: #002060; line-height: 1.6 !important;">
         Agentic AI: Turning Intelligence into <br> Action
-      </p>
+      </p> -->
     </div>
   </div>
 
