--- a/slide4.html
+++ b/slide4.html
@@ -377,6 +377,10 @@
                         <h3>Manufacturing</h3>
                         <p>Boosting production efficiency and quality control.</p>
                     </div>
+                    <div class="card">
+                        <h3>BI Agent</h3>
+                        <p>Boosting production efficiency and quality control.</p>
+                    </div>
                 </div>
             </div>
             <div id="categories" class="tab-content">
@@ -419,7 +423,7 @@
                     </div>
                     <div class="card">
                         <h3>LLM FINE-TUNING</h3>
-                        <p>Replacing vendor tools and SaaS subscriptions for RPA, OCR, and automation with custom Agentic AI workflows.</p>
+                        <p>Replacing vendor tools and SaaS subscriptions for RPA, OCR, and automation with custom Agentic AI workflows..</p>
                     </div>
                 </div>
             </div>
