--- a/slide7.html
+++ b/slide7.html
@@ -383,19 +383,19 @@
         <p class="fusefy-sub-title">Select a step to see the details.</p>
         <ul id="nav-list">
           <li class="fusefy-nav-item" data-step="1">
-            <i class="fa-solid fa-box-archive"></i> 1. Containerize the Code
+            <i class="fa-solid fa-box-archive"></i> 1. Requirement Gathering
           </li>
           <li class="fusefy-nav-item" data-step="2">
-            <i class="fa-solid fa-person-running"></i> 2. Run & Test
+            <i class="fa-solid fa-person-running"></i> 2. Jira Stories Creation
           </li>
           <li class="fusefy-nav-item" data-step="3">
-            <i class="fa-solid fa-code"></i> 3. Edit & Verify
+            <i class="fa-solid fa-code"></i> 3. Code Generation & Development
           </li>
           <li class="fusefy-nav-item" data-step="4">
-            <i class="fa-solid fa-cloud-arrow-up"></i> 4. Platform-based Deployment
+            <i class="fa-solid fa-cloud-arrow-up"></i> 4. Deployment
           </li>
           <li class="fusefy-nav-item" data-step="5">
-            <i class="fa-solid fa-circle-check"></i> 5. Automated Deployment Flow
+            <i class="fa-solid fa-circle-check"></i> 5. Monitoring & Observability
           </li>
         </ul>
       </div>
@@ -415,35 +415,35 @@
             <div class="fusefy-flow-icon-wrapper">
               <i class="fa-solid fa-code fusefy-flow-icon"></i>
             </div>
-            <span class="fusefy-flow-text">Code</span>
+            <span class="fusefy-flow-text">Req Gathering</span>
           </div>
           <i class="fa-solid fa-arrow-right fusefy-flow-arrow"></i>
           <div class="fusefy-flow-step">
             <div class="fusefy-flow-icon-wrapper">
               <i class="fa-solid fa-box-archive fusefy-flow-icon"></i>
             </div>
-            <span class="fusefy-flow-text">Containerize</span>
+            <span class="fusefy-flow-text">Jira story</span>
           </div>
           <i class="fa-solid fa-arrow-right fusefy-flow-arrow"></i>
           <div class="fusefy-flow-step">
             <div class="fusefy-flow-icon-wrapper">
               <i class="fa-solid fa-vial-circle-check fusefy-flow-icon"></i>
             </div>
-            <span class="fusefy-flow-text">Test & Edit</span>
+            <span class="fusefy-flow-text">Code Generation</span>
           </div>
           <i class="fa-solid fa-arrow-right fusefy-flow-arrow"></i>
           <div class="fusefy-flow-step">
             <div class="fusefy-flow-icon-wrapper">
               <i class="fa-solid fa-circle-check fusefy-flow-icon"></i>
             </div>
-            <span class="fusefy-flow-text">CI/CD</span>
+            <span class="fusefy-flow-text">Deploy</span>
           </div>
           <i class="fa-solid fa-arrow-right fusefy-flow-arrow"></i>
           <div class="fusefy-flow-step">
             <div class="fusefy-flow-icon-wrapper">
               <i class="fa-solid fa-rocket fusefy-flow-icon"></i>
             </div>
-            <span class="fusefy-flow-text">Deploy</span>
+            <span class="fusefy-flow-text">Monitor</span>
           </div>
         </div>
       </div>
