--- a/slide4.html
+++ b/slide4.html
@@ -52,13 +52,14 @@
         .tab-container {
             flex: 1;
             /* fill remaining width */
-            height: 380px;
-            /* INCREASED height for scroll */
+            min-height: 420px;
+            height: auto;
+            /* auto height - no scroll needed */
             background: #fff;
             border-radius: 12px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            overflow-y: auto;
-            /* enable vertical scroll */
+            overflow-y: visible;
+            /* remove scroll */
         }
 
         .tab-header {
@@ -91,8 +92,8 @@
         }
 
         .tab-content {
-            padding: 1.5rem;
-            /* Increased padding */
+            padding: 1rem;
+            /* Reduced padding */
             display: none;
         }
 
@@ -103,10 +104,10 @@
         /* Grid for cards */
         .card-grid {
             display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            /* Force 4 columns */
-            gap: 1.5rem;
-            /* Increased gap */
+            grid-template-columns: repeat(3, 1fr);
+            /* Change to 3 columns for better fit */
+            gap: 1rem;
+            /* Reduced gap */
         }
 
         /* --- Styles for the highlighted Healthcare card --- */
@@ -159,7 +160,8 @@
         }
 
         .card {
-            padding: 0.8rem;
+            padding: 0.6rem;
+            /* Reduced padding */
             border-radius: 8px;
             border: 1px solid #e5e7eb;
             background: #fafafa;
@@ -174,8 +176,10 @@
 
         .card h3 {
             margin-top: 0;
-            margin-bottom: 0.3rem;
-            font-size: 0.9rem;
+            margin-bottom: 0.2rem;
+            /* Reduced margin */
+            font-size: 0.8rem;
+            /* Smaller font size */
             font-weight: bold;
             color: #222;
             text-transform: uppercase;
@@ -183,7 +187,8 @@
 
         .card p {
             color: #555;
-            font-size: 0.85rem;
+            font-size: 0.75rem;
+            /* Smaller font size */
             line-height: 1.3;
             margin-bottom: 0;
         }
@@ -338,17 +343,16 @@
                 <button class="tab-button" onclick="showTab('categories')">Categories</button>
             </div>
             <div id="verticals" class="tab-content active">
-                <div class="healthcare-highlight">
-                    <h3>Healthcare</h3>
-                    <p>Streamlining patient care and administrative workflows.</p>
-                    <!-- UPDATED LINK: Uses onclick to call our JavaScript function -->
-                    <a class="details-arrow" onclick="scrollToElement('page-4a', event)" aria-label="Go to Page 4-A">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <polyline points="6 9 12 15 18 9"></polyline>
-                        </svg>
-                    </a>
-                </div>
                 <div class="card-grid">
+                    <div class="card" style="position: relative;">
+                        <h3>Healthcare</h3>
+                        <p>Streamlining patient care and administrative workflows.</p>
+                        <div style="position: absolute; bottom: 8px; right: 8px; color: #155596; cursor: pointer;" onclick="scrollToElement('page-4a', event)">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <polyline points="6 9 12 15 18 9"></polyline>
+                            </svg>
+                        </div>
+                    </div>
                     <div class="card">
                         <h3>Finance</h3>
                         <p>Automating financial operations and enhancing security.</p>
@@ -377,9 +381,14 @@
                         <h3>Manufacturing</h3>
                         <p>Boosting production efficiency and quality control.</p>
                     </div>
-                    <div class="card">
+                    <div class="card" style="position: relative;">
                         <h3>BI Agent</h3>
-                        <p>Boosting production efficiency and quality control.</p>
+                        <p>Data-driven insights for decisions.</p>
+                        <div style="position: absolute; bottom: 8px; right: 8px; color: #155596; cursor: pointer;" onclick="if(typeof Reveal !== 'undefined') { Reveal.slide(7); } else { window.location.href='index.html#/7'; }">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <polyline points="6 9 12 15 18 9"></polyline>
+                            </svg>
+                        </div>
                     </div>
                 </div>
             </div>
