--- a/slide8.html
+++ b/slide8.html
@@ -155,13 +155,20 @@
     <h1 class="zoom-in" data-auto-animate data-auto-animate-duration="1.5">
       BI Agent Dashboard
     </h1>
-    <img
-      src="images/Logo.png"
-      alt="Company Logo"
-      class="company-logo"
-      data-auto-animate
-      data-auto-animate-duration="1"
-    />
+    <div style="position: relative; display: inline-block;">
+      <a href="javascript:void(0);" onclick="if(typeof Reveal !== 'undefined') { Reveal.slide(3); } else { window.location.href='index.html#/3'; }" style="position: absolute; left: -40px; top: 50%; transform: translateY(-50%);">
+        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="#1a73e8" style="cursor: pointer;">
+          <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
+        </svg>
+      </a>
+      <img
+        src="images/Logo.png"
+        alt="Company Logo"
+        class="company-logo"
+        data-auto-animate
+        data-auto-animate-duration="1"
+      />
+    </div>
   </header>
 
   <!-- First Row: Feature Cards -->
