--- a/slide4.html
+++ b/slide4.html
@@ -363,7 +363,7 @@
                         <h3>Healthcare</h3>
                         <p>Streamlining patient care and administrative workflows.</p>
                         <div style="position: absolute; bottom: 8px; right: 8px; color: #155596; cursor: pointer;"
-                            onclick="scrollToElement('page-4a', event)">
+                            onclick="window.location.href = '#page-4a'">
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                 stroke-linejoin="round">
@@ -516,23 +516,13 @@
     <!-- ====================================================================== -->
     <!-- NEW PAGE (4-A) WITHIN THE SAME SLIDE -->
     <!-- ====================================================================== -->
-    <div id="page-4a" style="padding-top: 0%; min-height: 100vh;">
+    <div id="page-4a" style="padding-top: 0%; min-height: 100vh; scroll-margin-top: 20px;">
         <header class="slide-header" style="position: relative;">
             <h1 class="zoom-in"> Deep Dive into Insurance Payers (Commercial & Private) </h1>
             <img src="images/Logo.png" alt="Company Logo" class="company-logo" />
             <!-- Added up arrow for navigation back to main slide -->
             <div style="position: absolute; top: 10px; right: 100px; color: #155596; cursor: pointer; z-index: 100;"
-                onclick="
-                    document.getElementById('page-4a').style.display = 'none';
-                    document.querySelector('header.slide-header[data-id=\'header\']').style.display = 'block';
-                    document.querySelectorAll('.expertise-row').forEach(row => row.style.display = 'flex');
-                    window.scrollTo({top: 0, behavior: 'smooth'});
-                    setTimeout(function() { 
-                        document.querySelectorAll('.tab-content').forEach(c => c.classList.remove('active'));
-                        document.querySelectorAll('.tab-button').forEach(b => b.classList.remove('active'));
-                        document.getElementById('verticals').classList.add('active');
-                        document.querySelector('.tab-button:first-child').classList.add('active');
-                    }, 100);">
+                onclick="window.location.href = 'index.html#/3'; showMainContent()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <polyline points="18 15 12 9 6 15"></polyline>
@@ -695,6 +685,55 @@
                 </div>
             </div>
         </div>
-        <!-- changes in slide4 -->
+        <!-- Add the custom JavaScript for navigation -->
+        <script>
+            // Function to show the main content and hide the healthcare page
+            function showMainContent() {
+                // Show main content
+                document.querySelector('header.slide-header[data-id="header"]').style.display = 'block';
+                document.querySelectorAll('.expertise-row').forEach(row => {
+                    row.style.display = 'flex';
+                });
+                // Hide healthcare page
+                document.getElementById('page-4a').style.display = 'none';
+                // Reset tabs
+                document.querySelectorAll('.tab-content').forEach(c => c.classList.remove('active'));
+                document.querySelectorAll('.tab-button').forEach(b => b.classList.remove('active'));
+                document.getElementById('verticals').classList.add('active');
+                document.querySelector('.tab-button:first-child').classList.add('active');
+            }
+
+            // When page loads, check if we need to hide/show certain elements
+            document.addEventListener('DOMContentLoaded', function() {
+                // Check if we're directly accessing a specific section via hash
+                if (window.location.hash === '#page-4a') {
+                    // Hide main content
+                    document.querySelector('header.slide-header[data-id="header"]').style.display = 'none';
+                    document.querySelectorAll('.expertise-row').forEach(row => {
+                        row.style.display = 'none';
+                    });
+                    // Show healthcare page
+                    document.getElementById('page-4a').style.display = 'block';
+                } else {
+                    // Ensure proper display when loading the main page directly
+                    showMainContent();
+                }
+            });
+
+            // Listen for hash changes to handle navigation
+            window.addEventListener('hashchange', function() {
+                if (window.location.hash === '#page-4a') {
+                    // Hide main content
+                    document.querySelector('header.slide-header[data-id="header"]').style.display = 'none';
+                    document.querySelectorAll('.expertise-row').forEach(row => {
+                        row.style.display = 'none';
+                    });
+                    // Show healthcare page
+                    document.getElementById('page-4a').style.display = 'block';
+                } else if (window.location.hash === '' || window.location.hash === '#') {
+                    showMainContent();
+                }
+            });
+        </script>
     </div>
 </section>
