Changes in Slide 2 and 7 and removed the slide9

--- a/slide2.html
+++ b/slide2.html
@@ -326,7 +326,7 @@
   <div class="steps-fusefy">
     <div class="step-fusefy orange">16 +Hours </div>
     <div class="step-fusefy white">2 Weeks</div>
-    <div class="step-fusefy blue">3x faster</div>
+    <div class="step-fusefy blue">1+ month production launch</div>
   </div>
 
 
@@ -335,10 +335,10 @@
     <div class="feature-fusefy old-way">
       <h3>Manual Integrations</h3>
       <ul>
-        <li>RPA Subscriptions</li>
+        <li> RPA & SAAS subscriptions</li>
         <li>OCR Tools</li>
         <li>Vendor Lock-in risk</li>
-        <li>Custom connectors, scripts, and APIs</li>
+        <!-- <li>Custom connectors, scripts, and APIs</li> -->
       </ul>
     </div>
 
@@ -346,8 +346,8 @@
       <h3>Agentic AI Automation</h3>
       <ul>
         <li>Agentic AI Workflows</li>
-        <li>Custom LLMs</li>
-        <li>Full Control</li>
+        <li>Custom LLMs to Private LLMs</li>
+        <li>Full control to Customer managed workflows</li>
         <li>Dynamic adaptability</li>
       </ul>
     </div>
