--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         "./slide6.html",
         "./slide7.html",
         "./slide8.html",
-        "./slide9.html",
+        // "./slide9.html",
         "./slide10.html",
         "./slide11.html",
         "./slide12.html",
